<resources>
    <string name="app_name">EmprendeNow</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="mensaje_iniciar_sesion">Ya tienes cuenta, inicia sesión</string>
    <string name="bienvenido_empr">Bienvenido Emprendedor</string>
    <string name="mensaje_no_haz">No haz añadido tu emprendimiento</string>
    <string name="msg_btn_anadir">Añadir emprendimiento</string>
    <string name="costo">Costo:</string>
    <string name="cantidad">Cantidad:</string>
    <string name="metodo_pago">Metodo de pago</string>
    <string name="calificacion">Calificacion</string>
    <string name="usa_gps">Usa la opcion de GPS de tu celular</string>

    <string-array name="tipos_usuarios">
        <item>Empresa</item>
        <item>Cliente</item>
    </string-array>
    <string name="title_activity_mapa_empresa">MapaEmpresaActivity</string>
    <string name="title_activity_mapa_cliente">MapaClienteActivity</string>
</resources>