<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffde59">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/emprendenow"/>

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        android:text="@string/bienvenido_empr"/>

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1"
        android:layout_marginTop="5dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold"
        android:text="@string/mensaje_no_haz"/>

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text2"
        android:layout_marginTop="5dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold"
        android:text="Que esperas!!"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/text3"
        android:text="@string/msg_btn_anadir"
        android:textSize="15sp"
        android:backgroundTint="#cb6ce6"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#5271ff"
        app:menu="@menu/bottom_navigation_menu" />

</RelativeLayout>