<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ComprarProductoActivity"
    android:background="@color/yellow">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/emprendenow"/>

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_image"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:text="@string/costo"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/cant_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/cost"
        app:layout_constraintTop_toBottomOf="@+id/product_image"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cost"
        android:layout_marginTop="7dp"
        android:layout_marginStart="10dp"
        android:text="@string/cantidad"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/cant_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/quantity"
        app:layout_constraintTop_toBottomOf="@+id/cost"
        android:layout_marginTop="7dp"
        android:layout_marginStart="10dp"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/payment_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantity"
        android:layout_marginTop="7dp"
        android:layout_marginStart="10dp"
        android:text="@string/metodo_pago"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/blue"
        app:menu="@menu/bottom_navigation_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>